--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  height: 100%;
+}
+
+.App {
+  text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -28,11 +31,158 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.landing-body{
+  padding: 5px;
+  width: 100%;
+  position: absolute;
+}
+
+.landing-header{
+  height: 100vh;
+  background-image: linear-gradient(
+      to right, 
+      rgba(299, 299, 299, 0.5), 
+      rgba(204, 203, 203, 0.5)), 
+      url(./images/ron.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+}
+
+.Quote {
+  display: block;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 10px;
+  text-align: center;
+  font-size: 50px;
+  animation-name: moveInLeft;
+  animation-duration: 3s;
+}
+
+.header-primary{
+  color: white;
+  text-transform: uppercase;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
+@keyframes moveInLeft{
+
+  0%{
+      opacity: 0;
+      transform: translateX(-100px);
   }
-  to {
-    transform: rotate(360deg);
+
+  80%{
+      transform: translateX(10px);
   }
+
+  100%{
+      opacity: 1;
+      transform: translateX(0);
+  }
+}
+
+.buttons {
+  position: fix;
+  display: inline-block;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 240px;
+}
+
+.btn {
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 160px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+  color: #000;
+  animation-name: buttonMoveInRight;
+  animation-duration: 2s;
+}
+.btn:hover {
+  text-decoration: none;
+}
+/*btn_background*/
+.effect01 {
+  color: white;
+  border: 4px solid #000;
+  box-shadow: 0px 0px 0px 1px #000 inset;
+  background-color: #000;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.effect01:hover {
+  border: 4px solid #666;
+  background-color: #FFF;
+  box-shadow:0px 0px 0px 4px #EEE inset;
+}
+
+/*btn_text*/
+.effect01 span {
+  transition: all 0.2s ease-out;
+  z-index: 2;
+}
+.effect01:hover span{
+  letter-spacing: 0.13em;
+  color: #333;
+}
+
+/*highlight*/
+.effect01:after {
+  background: #FFF;
+  border: 0px solid #000;
+  content: "";
+  height: 155px;
+  left: -75px;
+  opacity: .8;
+  position: absolute;
+  top: -50px;
+  -webkit-transform: rotate(35deg);
+          transform: rotate(35deg);
+  width: 50px;
+  transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);/*easeOutCirc*/
+  z-index: 1;
+}
+.effect01:hover:after {
+  background: #FFF;
+  border: 20px solid #000;
+  opacity: 0;
+  left: 120%;
+  -webkit-transform: rotate(40deg);
+          transform: rotate(40deg);
+}
+
+@keyframes buttonMoveInRight{
+
+  0%{
+      opacity: 0;
+      transform: translateX(100px);
+  }
+
+  100%{
+      opacity: 1;
+      transform: translateX(0);
+  }
+
 }
